--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="taskText">Введите задачу</string>
+    <string name="board">Это опсиание</string>
     <string name="profile">Profile</string>
+    <string name="name">Введите имя</string>
 </resources>
