--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="board">Это опсиание</string>
     <string name="profile">Profile</string>
     <string name="name">Введите имя</string>
+    <string name="web_client_id">932239625635-0vmefooek47agqgkghbt9ib38udaqjs7.apps.googleusercontent.com</string>
 </resources>
